cvars: Rename KeyHunt cvars to g_kh*
Previously some KeyHunt cvars had the g_balance_ prefix, while this isn't the case for any other gametypes.
Renamed all KeyHunt cvars to use the g_kh prefix.

--- a/gametypes-server.cfg
+++ b/gametypes-server.cfg
@@ -93,8 +93,8 @@ set capturelimit_override -1	"Capture limit overriding the mapinfo specified one
 set captureleadlimit_override -1	"Capture lead limit overriding the mapinfo specified one; \"0\" = play without limit, \"-1\" = use the mapinfo's limit"
 set g_domination_point_limit -1	"Domination point limit overriding the mapinfo specified one; \"0\" = play without limit, \"-1\" = use the mapinfo's limit"
 set g_domination_point_leadlimit -1	"Domination point lead limit overriding the mapinfo specified one; \"0\" = play without limit, \"-1\" = use the mapinfo's limit"
-set g_keyhunt_point_limit -1	"Keyhunt point limit overriding the mapinfo specified one; \"0\" = play without limit, \"-1\" = use the mapinfo's limit"
-set g_keyhunt_point_leadlimit -1	"Keyhunt point lead limit overriding the mapinfo specified one; \"0\" = play without limit, \"-1\" = use the mapinfo's limit"
+set g_kh_point_limit -1	"Keyhunt point limit overriding the mapinfo specified one; \"0\" = play without limit, \"-1\" = use the mapinfo's limit"
+set g_kh_point_leadlimit -1	"Keyhunt point lead limit overriding the mapinfo specified one; \"0\" = play without limit, \"-1\" = use the mapinfo's limit"
 set g_race_laps_limit -1	"Race laps limit overriding the mapinfo specified one; \"0\" = play without limit, \"-1\" = use the mapinfo's limit"
 set g_nexball_goallimit -1 "Nexball goal limit overriding the mapinfo specified one; \"0\" = play without limit, \"-1\" = use the mapinfo's limit"
 set g_nexball_goalleadlimit -1 "Nexball goal lead limit overriding the mapinfo specified one; \"0\" = play without limit, \"-1\" = use the mapinfo's limit"
@@ -453,32 +453,32 @@ set g_keepawayball_tracking	1	"\"0\" = don't show a waypoint on the ball/ballcar
 // ==========
 //  key hunt
 // ==========
-set g_keyhunt 0 "Key Hunt: collect all keys from the enemies and bring them together to score" // script-ignore
-set g_balance_keyhunt_return_when_unreachable 1 "Automatically destroy a key if it falls into lava/slime/trigger hurt"
-set g_balance_keyhunt_delay_damage_return 5 "Time a key takes to automatically destroy itself if it falls into lava/slime/trigger hurt"
-set g_balance_keyhunt_delay_return 60 "Time a key takes to destroy itself if dropped"
-set g_balance_keyhunt_delay_round 5
-set g_balance_keyhunt_delay_tracking 10 "Time after which waypoints show on keys and key carriers, if negative they don't show"
-set g_balance_keyhunt_delay_fadeout 2
-set g_balance_keyhunt_delay_collect 1.5
-set g_balance_keyhunt_maxdist 150
-set g_balance_keyhunt_score_collect 3
-set g_balance_keyhunt_score_carrierfrag 2
-set g_balance_keyhunt_score_capture 100
-set g_balance_keyhunt_score_push 60
-set g_balance_keyhunt_score_destroyed 50
-set g_balance_keyhunt_score_destroyed_ownfactor 1
-set g_balance_keyhunt_carrier_damage	"1 1 1"	"Damage multiplier of key carriers; To themselves (X), to other carriers (Y), to noncarriers (Z)"
-set g_balance_keyhunt_carrier_force	"1 1 1"	"Force multiplier of key carriers; To themselves (X), to other carriers (Y), to noncarriers (Z)"
-set g_balance_keyhunt_noncarrier_damage	"1 1 1"	"Damage multiplier of players who don't have a key; To themselves (X), to carriers (Y), to other noncarriers (Z)"
-set g_balance_keyhunt_noncarrier_force	"1 1 1"	"Force multiplier of players who don't have a key; To themselves (X), to carriers (Y), to other noncarriers (Z)"
-set g_balance_keyhunt_dropvelocity 300
-set g_balance_keyhunt_throwvelocity 400
-set g_balance_keyhunt_protecttime 0.8
-set g_balance_keyhunt_damageforcescale 1
-set g_keyhunt_teams_override 0
-set g_keyhunt_teams 0
-set g_keyhunt_team_spawns 0 "When \"1\", players spawn from the team spawnpoints of the map, if any"
+set g_kh 0 "Key Hunt: collect all keys from the enemies and bring them together to score" // script-ignore
+set g_kh_return_when_unreachable 1 "Automatically destroy a key if it falls into lava/slime/trigger hurt"
+set g_kh_delay_damage_return 5 "Time a key takes to automatically destroy itself if it falls into lava/slime/trigger hurt"
+set g_kh_delay_return 60 "Time a key takes to destroy itself if dropped"
+set g_kh_delay_round 5
+set g_kh_delay_tracking 10 "Time after which waypoints show on keys and key carriers, if negative they don't show"
+set g_kh_delay_fadeout 2
+set g_kh_delay_collect 1.5
+set g_kh_maxdist 150
+set g_kh_score_collect 3
+set g_kh_score_carrierfrag 2
+set g_kh_score_capture 100
+set g_kh_score_push 60
+set g_kh_score_destroyed 50
+set g_kh_score_destroyed_ownfactor 1
+set g_kh_carrier_damage	"1 1 1"	"Damage multiplier of key carriers; To themselves (X), to other carriers (Y), to noncarriers (Z)"
+set g_kh_carrier_force	"1 1 1"	"Force multiplier of key carriers; To themselves (X), to other carriers (Y), to noncarriers (Z)"
+set g_kh_noncarrier_damage	"1 1 1"	"Damage multiplier of players who don't have a key; To themselves (X), to carriers (Y), to other noncarriers (Z)"
+set g_kh_noncarrier_force	"1 1 1"	"Force multiplier of players who don't have a key; To themselves (X), to carriers (Y), to other noncarriers (Z)"
+set g_kh_dropvelocity 300
+set g_kh_throwvelocity 400
+set g_kh_protecttime 0.8
+set g_kh_damageforcescale 1
+set g_kh_teams_override 0
+set g_kh_teams 0
+set g_kh_team_spawns 0 "When \"1\", players spawn from the team spawnpoints of the map, if any"
 
 
 // ===================
