cvars: Make gametype cvar names consistent
Made them all start with g_{abbreviated name}_.
Exceptions:
- Kept g_race* cvars as-is, as "g_rc" isn't as self-explanatory as   others.
Other changes:
- Neatened up g_keepawayball_* and g_tkaball_* cvar names.

--- a/ruleset-overkill.cfg
+++ b/ruleset-overkill.cfg
@@ -30,7 +30,7 @@ g_nades_nade_newton_style 2
 g_dodging 1
 sv_dodging_wall_dodging 1
 
-g_spawn_near_teammate "!g_assault !g_freezetag"
+g_spawn_near_teammate "!g_as !g_ft"
 g_spawn_near_teammate_ignore_spawnpoint 1
 g_spawnshieldtime 0.5
 g_respawn_delay_forced 2
