pm: rewrite water physics
**Water acceleration and friction**

Implements sv_wateraccelerate and sv_waterfriction (they had no code...)
and adds cvars sv_swimscale and sv_wadeslower.

Makes +jump and +crouch do proper 3d movement in water, like those keys
do in Q3 (see comments).
This also allows moving up and down ladders with +jump and +crouch which
makes them more shooter-friendly in that you can aim at something away
from the ladder while climbing easily and without falling off.

Limits water speed only if player is trying to exceed it (no effect on
keyboards but better for controllers, like how Q3 does it).

Matches Q3 and CPMA in their respective configs.
Also updates Q2 and Warsow settings based on their source code.

Fixes "bouncing off" water (potentially taking impact damage) with +jump
held, even when falling fast into it.

Fixes "turbo crouch jumping" in water.
Closes #2162

Removes duplicate water acceleration.

---

**Water Jumping**

Implements CSQC prediction of the water jump timer, and switches to the
proper timer field.

Updates from QW's water jump to Q3's.
Matches Q3 and CPMA in their respective configs, uses a more intuitive
and reliable version otherwise.

Fixes using the wrong direction for the horizontal water jump velocity
(against the collision plane instead of the way the player wants to go,
which can be quite different).

Fixes water jump traces being in the wrong direction because the result
of normalize(v_forward) was ignored, and because the player isn't
necessarily trying to move in the direction they're looking.

Fixes giving the player horizontal water jump velocity even when they
can't do the water jump because the eye level check fails.

Changes water jump traceline to tracebox because traceline (and
pointcontents) can miss if there's a grating, thin wall, or wishdir is
only slightly angled towards the brushwork, etc.
This also allows using short traces to avoid unwanted water jumps while
still jumping reliably when it is wanted.

--- a/physics.cfg
+++ b/physics.cfg
@@ -53,6 +53,10 @@ set g_physics_xonotic_stepdown 2
 set g_physics_xonotic_skimming 0
 set g_physics_xonotic_crouchjump 1
 set g_physics_xonotic_crouchspeedscale 0.5
+set g_physics_xonotic_wateraccelerate -1
+set g_physics_xonotic_waterfriction -1
+set g_physics_xonotic_waterflags 0
+set g_physics_xonotic_swimscale 0.7
 
 // ========
 //  Nexuiz
@@ -97,6 +101,10 @@ set g_physics_nexuiz_stepdown 0
 set g_physics_nexuiz_skimming 0
 set g_physics_nexuiz_crouchjump 1
 set g_physics_nexuiz_crouchspeedscale 0.5
+set g_physics_nexuiz_wateraccelerate -1
+set g_physics_nexuiz_waterfriction -1
+set g_physics_nexuiz_waterflags 0
+set g_physics_nexuiz_swimscale 0.7
 
 // =======
 //  Quake
@@ -141,6 +149,10 @@ set g_physics_quake_stepdown 0
 set g_physics_quake_skimming 0
 set g_physics_quake_crouchjump 1
 set g_physics_quake_crouchspeedscale 0.5
+set g_physics_quake_wateraccelerate -1
+set g_physics_quake_waterfriction -1
+set g_physics_quake_waterflags 0
+set g_physics_quake_swimscale 0.7
 
 // ========
 //  Warsow
@@ -185,6 +197,10 @@ set g_physics_warsow_stepdown 0
 set g_physics_warsow_skimming 0
 set g_physics_warsow_crouchjump 0
 set g_physics_warsow_crouchspeedscale 0.3125
+set g_physics_warsow_wateraccelerate 10
+set g_physics_warsow_waterfriction 1
+set g_physics_warsow_waterflags 0
+set g_physics_warsow_swimscale 0.5
 
 // ========
 //  XDF
@@ -229,6 +245,10 @@ set g_physics_xdf_stepdown 2
 set g_physics_xdf_skimming 0
 set g_physics_xdf_crouchjump 1
 set g_physics_xdf_crouchspeedscale 0.5
+set g_physics_xdf_wateraccelerate -1
+set g_physics_xdf_waterfriction -1
+set g_physics_xdf_waterflags 0
+set g_physics_xdf_swimscale 0.7
 
 // =========
 //  Quake 3
@@ -273,6 +293,10 @@ set g_physics_quake3_stepdown 0
 set g_physics_quake3_skimming 2
 set g_physics_quake3_crouchjump 0
 set g_physics_quake3_crouchspeedscale 0.25
+set g_physics_quake3_wateraccelerate 4
+set g_physics_quake3_waterfriction 1
+set g_physics_quake3_waterflags 7
+set g_physics_quake3_swimscale 0.5
 
 // =========
 //  CPMA
@@ -317,6 +341,10 @@ set g_physics_cpma_stepdown 0
 set g_physics_cpma_skimming 2
 set g_physics_cpma_crouchjump 0
 set g_physics_cpma_crouchspeedscale 0.25
+set g_physics_cpma_wateraccelerate 5
+set g_physics_cpma_waterfriction 0.5
+set g_physics_cpma_waterflags 4
+set g_physics_cpma_swimscale 0.75
 
 // ========
 //  Vecxis
@@ -361,6 +389,10 @@ set g_physics_vecxis_stepdown 0
 set g_physics_vecxis_skimming 0
 set g_physics_vecxis_crouchjump 1
 set g_physics_vecxis_crouchspeedscale 0.5
+set g_physics_vecxis_wateraccelerate -1
+set g_physics_vecxis_waterfriction -1
+set g_physics_vecxis_waterflags 0
+set g_physics_vecxis_swimscale 0.7
 
 // =========
 //  Quake 2
@@ -405,6 +437,10 @@ set g_physics_quake2_stepdown 0
 set g_physics_quake2_skimming 0
 set g_physics_quake2_crouchjump 0
 set g_physics_quake2_crouchspeedscale 0.33333333
+set g_physics_quake2_wateraccelerate 10
+set g_physics_quake2_waterfriction 1
+set g_physics_quake2_waterflags 0
+set g_physics_quake2_swimscale 0.5
 
 // =======
 //  Bones (Like CPMA, but balanced for auto bhop and combat gametypes)
@@ -449,6 +485,10 @@ set g_physics_bones_stepdown 2
 set g_physics_bones_skimming 1
 set g_physics_bones_crouchjump 1
 set g_physics_bones_crouchspeedscale 0.3125
+set g_physics_bones_wateraccelerate 5
+set g_physics_bones_waterfriction 0.5
+set g_physics_bones_waterflags 0
+set g_physics_bones_swimscale 0.75
 
 // ==========
 //  Overkill
@@ -493,3 +533,7 @@ set g_physics_overkill_stepdown 2
 set g_physics_overkill_skimming 0
 set g_physics_overkill_crouchjump 1
 set g_physics_overkill_crouchspeedscale 0.5
+set g_physics_overkill_wateraccelerate -1
+set g_physics_overkill_waterfriction -1
+set g_physics_overkill_waterflags 0
+set g_physics_overkill_swimscale 0.7
