--- a/xonotic-server.cfg
+++ b/xonotic-server.cfg
@@ -97,6 +97,8 @@ set sv_steptype 0 "\"0\" = traditional Xonotic/Nexuiz/Quake mode, \"1\" = unrest
 set sv_track_canjump 0 "track if the player released the jump key between 2 jumps to decide if they are able to jump or not"
 set sv_jumpvelocity_crouch 0 "jump height while crouching; \"0\" = regular jump height"
 set sv_skimming 0 "Q3 skimming allows players to keep their velocity when hitting non-ground obstacles if they slide past within 250ms of having landed on a walkable surface, \"2\" also enables the 160ms \"knockback\" (skimming + slick) after teleporting"
+set sv_swimscale 0.7 "modifier for sv_maxspeed that applies while swimming or submerged and adjusts the sv_waterflags 1 speed limit"
+set sv_waterflags 0 "\"1\" clamps the speed lower if wading or walking on the bottom in water not deep enough to swim, \"2\" slides along any ground plane underwater, \"4\" uses Q3 water jumps instead of a more intuitive and reliable version of them; add option numbers together to enable more than one"
 
 set sv_precacheplayermodels 1 "preload all the player models at game start, to avoid delays during gameplay"
 set sv_spectator_speed_multiplier 1.5 "base movement speed factor of spectators, all movement settings scale off this"
