--- a/physicsLeeStricklinOld.cfg
+++ b/physicsLeeStricklinOld.cfg
@@ -18,6 +18,8 @@ sv_jumpvelocity 304
 sv_jumpvelocity_crouch 0
 sv_wateraccelerate -1
 sv_waterfriction -1
+sv_waterflags 0
+sv_swimscale 0.7
 sv_airaccel_sideways_friction 0 // pain in the ass to tweak without screwing up the strafing
 sv_airaccel_qw -0.93 //given a negative value to combat potential cheats, was told by divVerent not to mess with it
 sv_airaccel_qw_stretchfactor 0
