--- a/physicsNexuiz26.cfg
+++ b/physicsNexuiz26.cfg
@@ -16,6 +16,8 @@ sv_jumpvelocity 300
 sv_jumpvelocity_crouch 0
 sv_wateraccelerate -1
 sv_waterfriction -1
+sv_waterflags 0
+sv_swimscale 0.7
 sv_airaccel_sideways_friction 0.35
 sv_airaccel_qw 0.95
 sv_airaccel_qw_stretchfactor 0
