--- a/physicsNoQWBunny-nexbased.cfg
+++ b/physicsNoQWBunny-nexbased.cfg
@@ -24,6 +24,8 @@ sv_jumpvelocity 260
 sv_jumpvelocity_crouch 0
 sv_wateraccelerate -1
 sv_waterfriction -1
+sv_waterflags 0
+sv_swimscale 0.7
 sv_airaccel_sideways_friction 0
 sv_airaccel_qw -0.9475
 sv_airaccel_qw_stretchfactor 0
