--- a/physicsQ.cfg
+++ b/physicsQ.cfg
@@ -17,6 +17,8 @@ sv_jumpvelocity 270
 sv_jumpvelocity_crouch 0
 sv_wateraccelerate -1
 sv_waterfriction -1
+sv_waterflags 0
+sv_swimscale 0.7
 sv_airaccel_sideways_friction 0
 sv_airaccel_qw 1
 sv_airaccel_qw_stretchfactor 0
