--- a/physicsQ2.cfg
+++ b/physicsQ2.cfg
@@ -14,8 +14,10 @@ sv_stepheight 18
 sv_steptype 0
 sv_jumpvelocity 270
 sv_jumpvelocity_crouch 0
-sv_wateraccelerate -1
+sv_wateraccelerate 10
 sv_waterfriction 1
+sv_waterflags 0
+sv_swimscale 0.5
 sv_airaccel_sideways_friction 0
 sv_airaccel_qw 1
 sv_airaccel_qw_stretchfactor 0
