--- a/physicsWarsowClassicBunny.cfg
+++ b/physicsWarsowClassicBunny.cfg
@@ -16,6 +16,8 @@ sv_jumpvelocity 280
 sv_jumpvelocity_crouch 0
 sv_wateraccelerate 10
 sv_waterfriction 1
+sv_waterflags 0
+sv_swimscale 0.5
 sv_airaccel_sideways_friction 0
 sv_airaccel_qw 1
 sv_airaccel_qw_stretchfactor 0
