--- a/physicsXDFLight.cfg
+++ b/physicsXDFLight.cfg
@@ -21,6 +21,8 @@ sv_jumpvelocity 270
 sv_jumpvelocity_crouch 0
 sv_wateraccelerate 4
 sv_waterfriction 1
+sv_waterflags 0
+sv_swimscale 0.7
 sv_airaccel_sideways_friction 0
 sv_airaccel_qw -0.9146875
 sv_airaccel_qw_stretchfactor 0
