pm: rewrite water physics
**Water acceleration and friction**

Implements sv_wateraccelerate and sv_waterfriction (they had no code...)
and adds cvars sv_swimscale and sv_wadeslower.

Makes +jump and +crouch do proper 3d movement in water, like those keys
do in Q3 (see comments).
This also allows moving up and down ladders with +jump and +crouch which
makes them more shooter-friendly in that you can aim at something away
from the ladder while climbing easily and without falling off.

Limits water speed only if player is trying to exceed it (no effect on
keyboards but better for controllers, like how Q3 does it).

Matches Q3 and CPMA in their respective configs.
Also updates Q2 and Warsow settings based on their source code.

Fixes "bouncing off" water (potentially taking impact damage) with +jump
held, even when falling fast into it.

Fixes "turbo crouch jumping" in water.
Closes #2162

Removes duplicate water acceleration.

---

**Water Jumping**

Implements CSQC prediction of the water jump timer, and switches to the
proper timer field.

Updates from QW's water jump logic to Q3's.

Matches Q3 water jump velocity (which is a buff).

Fixes using the wrong direction for the horizontal water jump velocity
(against the collision plane instead of the way the player wants to go,
which can be quite different).

Fixes water jump traces being in the wrong direction because the result
of normalize(v_forward) was ignored, and because the player isn't
necessarily trying to move in the direction they're looking.

Fixes giving the player horizontal water jump velocity even when they
can't do the water jump because the eye level check fails.

Changes water jump traceline to tracebox because traceline (and
pointcontents) can miss if there's a grating, thin wall, or wishdir is
only slightly angled towards the brushwork, etc.
This also allows using short traces to avoid unwanted water jumps while
still jumping reliably when it is wanted.

Removes abuse of .movedir to store a velocit

--- a/physicsQ3.cfg
+++ b/physicsQ3.cfg
@@ -17,6 +17,8 @@ sv_jumpvelocity 270
 sv_jumpvelocity_crouch 0
 sv_wateraccelerate 4
 sv_waterfriction 1
+sv_waterflags 3
+sv_swimscale 0.5
 sv_airaccel_sideways_friction 0
 sv_airaccel_qw 1
 sv_airaccel_qw_stretchfactor 0
