--- a/physicsCPMA.cfg
+++ b/physicsCPMA.cfg
@@ -38,8 +38,10 @@ sv_stepheight 18
 sv_steptype 2
 sv_jumpvelocity 270
 sv_jumpvelocity_crouch 0
-sv_wateraccelerate 4
-sv_waterfriction 1
+sv_wateraccelerate 5
+sv_waterfriction 0.5
+sv_waterflags 0
+sv_swimscale 0.75
 sv_airaccel_sideways_friction 0
 sv_airaccel_qw 1
 sv_airaccel_qw_stretchfactor 0
