cvars: Give some vehicle cvars descriptions
Gave some vehicle cvars descriptions.
Added all to vehicles.cfg.

--- a/vehicles.cfg
+++ b/vehicles.cfg
@@ -154,8 +154,8 @@ set g_vehicle_racer_blowup_coredamage 250
 set g_vehicle_racer_blowup_edgedamage 15
 set g_vehicle_racer_blowup_forceintensity 250
 
-set g_vehicle_racer_bouncefactor 0.25 "Factor of old velocity to keep after collision"
-set g_vehicle_racer_bouncestop 0 "If not 0, new velocity after bounce is 0 if new velocity is smaller than this"
+set g_vehicle_racer_bouncefactor 0.25 "Racer factor of old velocity to keep after bouncing"
+set g_vehicle_racer_bouncestop 0 "Speed threshold as a fraction of sv_gravity at which Racers will come to a stop when on ground"
 set g_vehicle_racer_bouncepain "200 0.15 150" "minspeed_for_pain speedchange_to_pain_factor max_damage"
 
 set g_vehicle_racer_cannon_cost 1.5
@@ -219,8 +219,8 @@ set g_vehicle_raptor_shield 200
 set g_vehicle_raptor_shield_regen 25
 set g_vehicle_raptor_shield_regen_pause 1.5
 
-set g_vehicle_raptor_bouncefactor 0.2
-set g_vehicle_raptor_bouncestop 0
+set g_vehicle_raptor_bouncefactor 0.2 "Raptor factor of old velocity to keep after bouncing"
+set g_vehicle_raptor_bouncestop 0 "Speed threshold as a fraction of sv_gravity at which Raptors will come to a stop when on ground"
 set g_vehicle_raptor_bouncepain "1 4 1000"
 
 set g_vehicle_raptor_cannon_cost 1
