--- a/bal-wep-xonotic.cfg
+++ b/bal-wep-xonotic.cfg
@@ -530,30 +530,30 @@ set g_balance_hook_weaponstartoverride -1
 set g_balance_hook_weaponthrowable 1
 // }}}
 // {{{ #14: Heavy Laser Assault Cannon (MUTATOR WEAPON)
-set g_balance_hlac_pickup_ammo 30
+set g_balance_hlac_pickup_ammo 60
 set g_balance_hlac_primary_ammo 1
-set g_balance_hlac_primary_animtime 0.4
-set g_balance_hlac_primary_damage 18
-set g_balance_hlac_primary_edgedamage 9
-set g_balance_hlac_primary_force 90
+set g_balance_hlac_primary_animtime 0.03125 // fast enough to always fire in "semi-auto" so it feels reliable
+set g_balance_hlac_primary_damage 10 // half blaster
+set g_balance_hlac_primary_edgedamage 5 // half blaster
+set g_balance_hlac_primary_force 15 // low enough to minimise annoyance
 set g_balance_hlac_primary_lifetime 5
-set g_balance_hlac_primary_radius 70
-set g_balance_hlac_primary_refire 0.15
+set g_balance_hlac_primary_radius 60 // match blaster
+set g_balance_hlac_primary_refire 0.078125 // 12.8/s, multiple of server ticrate so it sounds consistent
 set g_balance_hlac_primary_speed 6000
-set g_balance_hlac_primary_spread_add 0.0045
+set g_balance_hlac_primary_spread_add 0.001953125 // 1/512, small to suit faster ROF and lower damage per shot
 set g_balance_hlac_primary_spread_crouchmod 0.25
-set g_balance_hlac_primary_spread_max 0.25
-set g_balance_hlac_primary_spread_min 0.01
+set g_balance_hlac_primary_spread_max 0.03125 // not hitscan so smallish, but big enough that crouching is useful at long range
+set g_balance_hlac_primary_spread_min 0 // dead accurate first shot
 set g_balance_hlac_reload_ammo 0
 set g_balance_hlac_reload_time 2
 set g_balance_hlac_secondary 1
-set g_balance_hlac_secondary_ammo 10
+set g_balance_hlac_secondary_ammo 6 // fires 6 projectiles, also comparable damage:ammo ratio to vortex
 set g_balance_hlac_secondary_animtime 0.3
 set g_balance_hlac_secondary_damage 15
 set g_balance_hlac_secondary_edgedamage 7.5
-set g_balance_hlac_secondary_force 90
+set g_balance_hlac_secondary_force 30
 set g_balance_hlac_secondary_lifetime 5
-set g_balance_hlac_secondary_radius 70
+set g_balance_hlac_secondary_radius 60
 set g_balance_hlac_secondary_refire 1
 set g_balance_hlac_secondary_shots 6
 set g_balance_hlac_secondary_speed 6000
