menu: simplify and fix texture compression settings
Removes `r_texture_dds_load` from the effects configs and menu.
For normal builds it _must_ be enabled and for other builds it should be
enabled as some servers have pk3s containing only this type of texture.

Adds `gl_texturecompression` to the effects configs and menu.
This may be adjusted without breaking things, it's unnecessary on
graphics cards but could help with running large custom pk3s or git
builds on integrated graphics.

Reduces the changes made by updateCompression() to only what's really
needed, to avoid unnecessary `r_restart` (such as at first start with
default config) and/or clobbering of users' settings.
Closes #3008

Ensures `r_texture_dds_swdecode` is enabled if required.

--- a/effects-med.cfg
+++ b/effects-med.cfg
@@ -8,6 +8,7 @@ cl_spawn_point_particles 0
 cl_playerdetailreduction 4
 gl_flashblend 0
 gl_picmip 0
+gl_texturecompression 2
 gl_texturecompression_2d 0
 gl_texturecompression_sky 1
 r_font_compress 0
@@ -34,7 +35,6 @@ r_shadow_usenormalmap 0
 r_showsurfaces 0
 r_sky 1
 r_subdivisions_tolerance 4
-r_texture_dds_load 1
 r_water 0
 r_water_resolutionmultiplier 0.25
 
