--- a/xonotic-client.cfg
+++ b/xonotic-client.cfg
@@ -867,8 +867,8 @@ scr_conscroll_y -0.3
 scr_conforcewhiledisconnected 0
 scr_infobar_height 12
 
-// DP cannot properly detect this, so rather turn off the detection
-r_texture_dds_load_alphamode 2
+r_texture_dds_load 1 // required for normal Xonotic builds and certain map pk3s
+r_texture_dds_load_alphamode 2 // DP cannot properly detect this, so rather turn off the detection
 r_texture_dds_swdecode 1 // SW decode to quarter res if we want to load DDS but don't support the extension for it
 r_texture_dds_load_logfailure 0 // this engine feature SUCKS
 set vid_netwmfullscreen 0 // doesn't support non-native res
