--- a/effects-omg.cfg
+++ b/effects-omg.cfg
@@ -8,6 +8,7 @@ cl_spawn_point_particles 0
 cl_playerdetailreduction 4
 gl_flashblend 1
 gl_picmip 1337
+gl_texturecompression 1
 gl_texturecompression_2d 1
 gl_texturecompression_sky 1
 r_font_compress 1
@@ -34,7 +35,6 @@ r_shadow_usenormalmap 0
 r_showsurfaces 3
 r_sky 0
 r_subdivisions_tolerance 16
-r_texture_dds_load 1
 r_water 0
 r_water_resolutionmultiplier 0.25
 
