--- a/effects-ultimate.cfg
+++ b/effects-ultimate.cfg
@@ -8,6 +8,7 @@ cl_spawn_point_particles 1
 cl_playerdetailreduction 0
 gl_flashblend 0
 gl_picmip -1
+gl_texturecompression 0
 gl_texturecompression_2d 0
 gl_texturecompression_sky 0
 r_font_compress 0
@@ -34,7 +35,6 @@ r_shadow_usenormalmap 1
 r_showsurfaces 0
 r_sky 1
 r_subdivisions_tolerance 1
-r_texture_dds_load 0
 r_water 1
 r_water_resolutionmultiplier 1
 
