--- a/xonotic-common.cfg
+++ b/xonotic-common.cfg
@@ -42,16 +42,15 @@ set sv_master2 "dpm6.xonotic.xyz:27777"  // gazby, soylent_cow
 set sv_master3 "master3.xonotic.org:27950"
 set sv_master4 "master4.xonotic.org:42863"
 
+// console RGB (including dedicated server, see sys_colortranslation) and GUI text appearance
+r_textbrightness 0.2
+r_textcontrast 0.8
+
 // load console command aliases and settings
 exec commands.cfg
 
 // this should be executed only once even on ruleset-votable servers, otherwise the tips would always start from 0
 if_dedicated exec help.cfg
-
-// TODO if possible remove client notification cvars from the server
-// only a few cvars in notifications.cfg are server settings
-if_dedicated exec notifications.cfg
-if_client exec xonotic-client.cfg
 
 exec xonotic-server.cfg
 
@@ -100,11 +99,25 @@ unalias _cdtrack_0
 unalias _cdtrack_1
 unalias _cdtrack
 
-cd remap $g_cdtracks_remaplist
 set sv_intermission_cdtrack ""
 
 set g_cdtracks_dontusebydefault "rising-of-the-phoenix"
 seta menu_cdtrack "rising-of-the-phoenix"
+
+if_client exec xonotic-client.cfg // after g_cdtracks_remaplist is set
+
+// TODO if possible remove client notification cvars from the server
+// only a few cvars in notifications.cfg are server settings
+exec notifications.cfg
+
+seta hud_colorset_foreground_1 "2" "primary priority (important names, etc.)"
+seta hud_colorset_foreground_2 "3" "secondary priority (items, locations, numbers, etc.)"
+seta hud_colorset_foreground_3 "4" "tertiary priority or relatively inconsequential text"
+seta hud_colorset_foreground_4 "1" "notice/attention grabbing texting"
+seta hud_colorset_kill_1 "1" "'bad' or 'dangerous' text (death messages against you, kill notifications, etc.)"
+seta hud_colorset_kill_2 "3" "similar to above, but less important, OR a highlight out of above message type"
+seta hud_colorset_kill_3 "4" "'good' or 'beneficial' text (you fragging someone, etc.)"
+seta hud_colorset_background "7" "neutral/unimportant text"
 
 // these entities are not referenced by anything directly, they just represent
 // teams and are found by find() when needed
