--- a/xonotic-server.cfg
+++ b/xonotic-server.cfg
@@ -28,6 +28,7 @@ alias sv_hook_readyrestart
 //nifreks lockonrestart feature, used in team-based gametypes, if set to 1 and all players readied up no other player can then join the game anymore, useful to block spectators from joining
 set teamplay_lockonrestart 0 "lock teams once all players readied up and the game restarted (no new players can join after restart unless using the server-command unlockteams)"
 
+maxplayers 16
 set g_maxplayers 0 "maximum number of players allowed to play at the same time; \"0\" = unlimited, \"-1\" = use the map setting or unlimited if not set (rounded to multiple of team number)"
 set g_maxplayers_spectator_blocktime 10 "if sv_spectate is disabled, such as by voting for \"nospectators\", this setting defines the number of seconds an observer/spectator has to join the game before they get kicked"
 
