--- a/xonotic-client.cfg
+++ b/xonotic-client.cfg
@@ -360,6 +360,7 @@ seta cl_announcer default "name of the announcer you wish to use from data/sound
 seta cl_announcer_antispam 2 "number of seconds before an announcement of the same sound can be played again"
 seta cl_announcer_maptime 3 "play announcer sound telling you the remaining maptime; \"0\" = do not play at all, \"1\" = play at one minute, \"2\" = play at five minutes, \"3\" = play both"
 
+cd remap $g_cdtracks_remaplist
 set snd_cdautopause 0
 
 // sound randomization
@@ -530,8 +531,6 @@ set _menu_initialized 0 "is \"0\" on first menu loading, \"1\" later"
 set _menu_credits_export 0 "set to \"1\" and restart the menu to export credits to credits.txt (menu will automatically reset to \"0\")"
 alias menu_credits_export "_menu_credits_export 1; menu_restart"
 
-r_textbrightness 0.2
-r_textcontrast 0.8
 r_textshadow 0
 
 // safe font defaults
@@ -942,7 +941,6 @@ exec hud_luma.cfg
 exec effects-normal.cfg
 exec crosshairs.cfg
 exec gamemodes-client.cfg
-exec notifications.cfg
 
 seta cl_physics "default" "client selected physics set"
 
