sv_dedicated: update dedicated server detection
qport is a QW-specific client cvar, bit of a kludge to rely on it like
this.

--- a/commands.cfg
+++ b/commands.cfg
@@ -4,28 +4,15 @@
 
 // create if_client and if_dedicated aliases that allow executing commands based on
 // whether it is a dedicated server or a client
-alias _def_detect_dedicated "alias _detect_dedicated_${qport ?} \"\""
-_def_detect_dedicated
-alias "_detect_dedicated_" "${* asis}"
-alias "_detect_dedicated_${qport ?}" "${* asis}"
-alias "_detect_dedicated_0" ""
-alias _if_dedicated "_detect_dedicated_${qport ?} ${* asis}"
 alias if_client "${* asis}"
 alias if_dedicated "${* asis}"
-_if_dedicated alias if_client ""
-if_client alias if_dedicated ""
+alias _sv_dedicated_0 "alias if_dedicated \"\""
+alias _sv_dedicated_1 "alias if_client \"\""
+_sv_dedicated_${sv_dedicated}
 
 // these aliases are now useless, remove them
-// NOTE for some reason _detect_dedicated_ no longer exists in dedicated
-unalias _def_detect_dedicated
-if_client unalias "_detect_dedicated_"
-unalias "_detect_dedicated_${qport ?}"
-unalias _detect_dedicated_0
-unalias _if_dedicated
-
-// for easy access by QC
-if_dedicated set is_dedicated 1
-if_client    set is_dedicated 0
+unalias _sv_dedicated_0
+unalias _sv_dedicated_1
 
 if_dedicated "alias" qc_cmd_sv     "sv_cmd $$*"
 if_client    "alias" qc_cmd_sv     "sv_cmd $$*"
