Update curl cvars
These were all defaults except the version, and they're used by the
server too so they've been renamed without the cl_ prefix.

--- a/xonotic-common.cfg
+++ b/xonotic-common.cfg
@@ -32,6 +32,8 @@ gameversion_max 65535 // future versions should nag players to update
 
 seta g_configversion 0	"configuration file version (used to upgrade settings); \"0\" = first run, or previous start was <2.4.1. later, it's overridden by config.cfg, version ranges are defined in config_update.cfg"
 
+curl_useragent_append "$g_xonoticversion"
+
 // Set the master servers to do DNS lookups we control.
 // This allows us to update the master server IPs without a release.
 set sv_masterextra1 "master1.xonotic.org:42863"
