pm: implement the Q3 penalty to air acceleration while holding +jump
As an option for manual bhopping only.

This code was needed for proper water movement, might as well use it for
this as well to complete CPMA physics support.

--- a/xonotic-client.cfg
+++ b/xonotic-client.cfg
@@ -246,7 +246,7 @@ set cl_respawn_ghosts_keepcolors 1 "make respawn ghosts keep body colors"
 set _teams_available 0 "internal cvar, value is synced from the server to reflect currently available teams to join"
 
 cl_movement 1
-cl_movement_track_canjump 0
+set cl_movement_track_canjump 0 "\"1\" tracks if the player released the jump key between 2 jumps to decide if they are able to jump or not, \"2\" also enables Q3's penalty to air acceleration while holding jump"
 cl_stairsmoothspeed 200
 
 alias wpeditor_menu "quickmenu file \"\" wpeditor.txt"
