pm: implement the Q3 penalty to air acceleration while holding +jump
As an option for manual bhopping only.

This code was needed for proper water movement, might as well use it for
this as well to complete CPMA physics support.

--- a/xonotic-server.cfg
+++ b/xonotic-server.cfg
@@ -94,7 +94,7 @@ set sv_jumpspeedcap_min "nan" "lower bound on the baseline velocity of a jump; f
 set sv_jumpspeedcap_max "nan" "upper bound on the baseline velocity of a jump; final velocity will be <= (jumpheight * max + jumpheight); \"nan\" disables"
 set sv_jumpspeedcap_max_disable_on_ramps 0 "disable upper baseline velocity bound on ramps to preserve the old rampjump style"
 set sv_steptype 0 "\"0\" = traditional Xonotic/Nexuiz/Quake mode, \"1\" = unrestricted test mode, \"2\" = CPMA mode, \"3\" = VQ3 mode; NOTE all modes allow stepping up over tiny ramps that typically are brush misalignments (needed for some Q3 maps), Xonotic 0.8.x and earlier didn't allow it)"
-set sv_track_canjump 0 "track if the player released the jump key between 2 jumps to decide if they are able to jump or not"
+set sv_track_canjump 0 "\"1\" tracks if the player released the jump key between 2 jumps to decide if they are able to jump or not, \"2\" also enables Q3's penalty to air acceleration while holding jump"
 set sv_jumpvelocity_crouch 0 "jump height while crouching; \"0\" = regular jump height"
 set sv_skimming 0 "Q3 skimming allows players to keep their velocity when hitting non-ground obstacles if they slide past within 250ms of having landed on a walkable surface, \"2\" also enables the 160ms \"knockback\" (skimming + slick) after teleporting"
 set sv_swimscale 0.7 "modifier for sv_maxspeed that applies while swimming or submerged and adjusts the sv_waterflags 1 speed limit"
