Change cl_nettimesyncboundmode default to a smoother one
Sometimes mode 6 isn't smooth even though the connection is good, this
mode doesn't have that problem and is still quick enough and is very
precise.

--- a/xonotic-client.cfg
+++ b/xonotic-client.cfg
@@ -674,6 +674,7 @@ makesaved music_playlist_random0
 
 cl_netfps 64 // should match or be a multiple of sys_ticrate
 _cl_rate 262144 // should allow the max csprogs.dat speed of 128hz * 1400
+cl_nettimesyncboundmode 5 // smoother than 6 without compromising hitscan antilag
 
 scr_loadingscreen_maxfps 32
 cl_maxidlefps 32
