cl_physics: rename "defrag" to "xdf"
DeFRaG has two physics configs and they're both quite different from
physicsXDF.cfg.

--- a/physics.cfg
+++ b/physics.cfg
@@ -7,7 +7,7 @@
 //  Main options
 // ==============
 set g_physics_clientselect 0 "allow clients to select their physics set"
-set g_physics_clientselect_options "xonotic nexuiz quake warsow defrag quake3 vecxis quake2 bones"
+set g_physics_clientselect_options "xonotic nexuiz quake warsow xdf quake3 vecxis quake2 bones"
 set g_physics_clientselect_default "" "override default physics"
 
 // =========
@@ -139,36 +139,36 @@ set g_physics_warsow_slickaccelerate 15
 set g_physics_warsow_track_canjump 0
 
 // ========
-//  DeFrag
+//  XDF
 // ========
-set g_physics_defrag_airaccel_qw 0.95
-set g_physics_defrag_airstrafeaccel_qw 1
-set g_physics_defrag_airspeedlimit_nonqw 0
-set g_physics_defrag_maxspeed 320
-set g_physics_defrag_jumpvelocity 270
-set g_physics_defrag_jumpvelocity_crouch 0
-set g_physics_defrag_maxairstrafespeed 30
-set g_physics_defrag_maxairspeed 320
-set g_physics_defrag_airstrafeaccelerate 70
-set g_physics_defrag_warsowbunny_turnaccel 0
-set g_physics_defrag_airaccel_qw_stretchfactor 0
-set g_physics_defrag_airaccel_sideways_friction 0
-set g_physics_defrag_aircontrol 150
-set g_physics_defrag_aircontrol_flags 0
-set g_physics_defrag_aircontrol_power 2
-set g_physics_defrag_aircontrol_penalty 0
-set g_physics_defrag_warsowbunny_airforwardaccel 1.00001
-set g_physics_defrag_warsowbunny_topspeed 925
-set g_physics_defrag_warsowbunny_accel 0.1593
-set g_physics_defrag_warsowbunny_backtosideratio 0.8
-set g_physics_defrag_friction 5.8
-set g_physics_defrag_accelerate 15
-set g_physics_defrag_stopspeed 100
-set g_physics_defrag_airaccelerate 1
-set g_physics_defrag_airstopaccelerate 2.5
-set g_physics_defrag_airstopaccelerate_full 0
-set g_physics_defrag_slickaccelerate 15
-set g_physics_defrag_track_canjump 0
+set g_physics_xdf_airaccel_qw 0.95
+set g_physics_xdf_airstrafeaccel_qw 1
+set g_physics_xdf_airspeedlimit_nonqw 0
+set g_physics_xdf_maxspeed 320
+set g_physics_xdf_jumpvelocity 270
+set g_physics_xdf_jumpvelocity_crouch 0
+set g_physics_xdf_maxairstrafespeed 30
+set g_physics_xdf_maxairspeed 320
+set g_physics_xdf_airstrafeaccelerate 70
+set g_physics_xdf_warsowbunny_turnaccel 0
+set g_physics_xdf_airaccel_qw_stretchfactor 0
+set g_physics_xdf_airaccel_sideways_friction 0
+set g_physics_xdf_aircontrol 150
+set g_physics_xdf_aircontrol_flags 0
+set g_physics_xdf_aircontrol_power 2
+set g_physics_xdf_aircontrol_penalty 0
+set g_physics_xdf_warsowbunny_airforwardaccel 1.00001
+set g_physics_xdf_warsowbunny_topspeed 925
+set g_physics_xdf_warsowbunny_accel 0.1593
+set g_physics_xdf_warsowbunny_backtosideratio 0.8
+set g_physics_xdf_friction 5.8
+set g_physics_xdf_accelerate 15
+set g_physics_xdf_stopspeed 100
+set g_physics_xdf_airaccelerate 1
+set g_physics_xdf_airstopaccelerate 2.5
+set g_physics_xdf_airstopaccelerate_full 0
+set g_physics_xdf_slickaccelerate 15
+set g_physics_xdf_track_canjump 0
 
 // =========
 //  Quake 3
