cl_physics: add CPMA

--- a/physics.cfg
+++ b/physics.cfg
@@ -7,7 +7,7 @@
 //  Main options
 // ==============
 set g_physics_clientselect 0 "allow clients to select their physics set"
-set g_physics_clientselect_options "xonotic nexuiz quake warsow xdf quake3 vecxis quake2 bones"
+set g_physics_clientselect_options "xonotic nexuiz quake warsow xdf quake3 cpma vecxis quake2 bones"
 set g_physics_clientselect_default "" "override default physics"
 
 // =========
@@ -201,6 +201,38 @@ set g_physics_quake3_airstopaccelerate 0
 set g_physics_quake3_airstopaccelerate_full 0
 set g_physics_quake3_slickaccelerate 1
 set g_physics_quake3_track_canjump 1
+
+// =========
+//  CPMA
+// =========
+set g_physics_cpma_airaccel_qw 1
+set g_physics_cpma_airstrafeaccel_qw 0
+set g_physics_cpma_airspeedlimit_nonqw 0
+set g_physics_cpma_maxspeed 320
+set g_physics_cpma_jumpvelocity 270
+set g_physics_cpma_jumpvelocity_crouch 0
+set g_physics_cpma_maxairstrafespeed 30
+set g_physics_cpma_maxairspeed 320
+set g_physics_cpma_airstrafeaccelerate 70
+set g_physics_cpma_warsowbunny_turnaccel 0
+set g_physics_cpma_airaccel_qw_stretchfactor 0
+set g_physics_cpma_airaccel_sideways_friction 0
+set g_physics_cpma_aircontrol 150
+set g_physics_cpma_aircontrol_flags 5
+set g_physics_cpma_aircontrol_power 2
+set g_physics_cpma_aircontrol_penalty 0
+set g_physics_cpma_warsowbunny_airforwardaccel 1.00001
+set g_physics_cpma_warsowbunny_topspeed 925
+set g_physics_cpma_warsowbunny_accel 0.1593
+set g_physics_cpma_warsowbunny_backtosideratio 0.8
+set g_physics_cpma_friction 6
+set g_physics_cpma_accelerate 15
+set g_physics_cpma_stopspeed 100
+set g_physics_cpma_airaccelerate 1
+set g_physics_cpma_airstopaccelerate 2.5
+set g_physics_cpma_airstopaccelerate_full 1
+set g_physics_cpma_slickaccelerate 15
+set g_physics_cpma_track_canjump 1
 
 // ========
 //  Vecxis
