cl_physics: minor config updates
Removes warsow from default options as its doublejump 1 plus auto bhop
combo is unbalanced for normal gametypes, and it has an issue with W
turning being rather OP. Also it's quite different from warsow (which
has two physics configs and it's unclear which this is meant to be).

--- a/physicsQ3.cfg
+++ b/physicsQ3.cfg
@@ -19,7 +19,7 @@ sv_waterfriction 1
 sv_airaccel_sideways_friction 0
 sv_airaccel_qw 1
 sv_airaccel_qw_stretchfactor 0
-// Q3A doesn't have airstopaccelerate and strafeaccelerate
+// Q3A doesn't have airstopaccelerate and airstrafeaccelerate
 // but they're added in cpm1_dev_docs.zip with values 1 and 1 in VQ3 mode
 sv_airstopaccelerate 1
 sv_airstopaccelerate_full 1
