--- a/xonotic-client.cfg
+++ b/xonotic-client.cfg
@@ -942,7 +942,7 @@ exec effects-normal.cfg
 exec crosshairs.cfg
 exec gamemodes-client.cfg
 
-seta cl_physics "default" "client selected physics set"
+seta cl_physics "default" "client selected physics set, use the `physics list` command to see the options the server has"
 
 // enable menu syncing - must be after files that call menu_sync on startup - see alias menu_sync ""
 alias menu_sync "menu_cmd sync"
