--- a/physics.cfg
+++ b/physics.cfg
@@ -7,7 +7,7 @@
 //  Main options
 // ==============
 set g_physics_clientselect 0 "allow clients to select their physics set"
-set g_physics_clientselect_options "xonotic nexuiz quake warsow xdf quake3 cpma vecxis quake2 bones"
+set g_physics_clientselect_options "xonotic nexuiz vecxis quake quake2 quake3 cpma bones xdf"
 set g_physics_clientselect_default "" "override default physics"
 
 // =========
@@ -222,7 +222,7 @@ set g_physics_quake3_jumpvelocity 270
 set g_physics_quake3_jumpvelocity_crouch 0
 set g_physics_quake3_maxairstrafespeed 0
 set g_physics_quake3_maxairspeed 320
-set g_physics_quake3_airstrafeaccelerate 0
+set g_physics_quake3_airstrafeaccelerate 1
 set g_physics_quake3_warsowbunny_turnaccel 0
 set g_physics_quake3_airaccel_qw_stretchfactor 0
 set g_physics_quake3_airaccel_sideways_friction 0
@@ -240,8 +240,8 @@ set g_physics_quake3_stepheight 18
 set g_physics_quake3_accelerate 10
 set g_physics_quake3_stopspeed 100
 set g_physics_quake3_airaccelerate 1
-set g_physics_quake3_airstopaccelerate 0
-set g_physics_quake3_airstopaccelerate_full 0
+set g_physics_quake3_airstopaccelerate 1
+set g_physics_quake3_airstopaccelerate_full 1
 set g_physics_quake3_slickaccelerate 1
 set g_physics_quake3_doublejump 0
 set g_physics_quake3_jumpspeedcap_min 0
@@ -371,11 +371,11 @@ set g_physics_quake2_track_canjump 1
 set g_physics_quake2_stepdown 0
 
 // =======
-//  Bones
+//  Bones (Like CPMA, but balanced for auto bhop and combat gametypes)
 // =======
 set g_physics_bones_gravity 750
 set g_physics_bones_airaccel_qw 1
-set g_physics_bones_airstrafeaccel_qw 1
+set g_physics_bones_airstrafeaccel_qw 0
 set g_physics_bones_airspeedlimit_nonqw 0
 set g_physics_bones_maxspeed 320
 set g_physics_bones_jumpvelocity 270
@@ -394,7 +394,7 @@ set g_physics_bones_warsowbunny_airforwardaccel 1.00001
 set g_physics_bones_warsowbunny_topspeed 925
 set g_physics_bones_warsowbunny_accel 0.1593
 set g_physics_bones_warsowbunny_backtosideratio 0.8
-set g_physics_bones_friction 5.97
+set g_physics_bones_friction 6
 set g_physics_bones_friction_slick 0
 set g_physics_bones_stepheight 25 // 42.25+31 - 48.6 = 24.65 (xon jump height + stepheight - cpma jump height)
 set g_physics_bones_accelerate 15
