cl_physics: add sv_gravity

--- a/physics.cfg
+++ b/physics.cfg
@@ -13,6 +13,7 @@ set g_physics_clientselect_default "" "override default physics"
 // =========
 //  Xonotic
 // =========
+set g_physics_xonotic_gravity 800
 set g_physics_xonotic_airaccel_qw -0.8
 set g_physics_xonotic_airstrafeaccel_qw -0.95
 set g_physics_xonotic_airspeedlimit_nonqw 900
@@ -46,6 +47,7 @@ set g_physics_xonotic_stepdown 2
 // ========
 //  Nexuiz
 // ========
+set g_physics_nexuiz_gravity 800
 set g_physics_nexuiz_airaccel_qw 0.95
 set g_physics_nexuiz_airstrafeaccel_qw 0
 set g_physics_nexuiz_airspeedlimit_nonqw 0
@@ -79,6 +81,7 @@ set g_physics_nexuiz_stepdown 0
 // =======
 //  Quake
 // =======
+set g_physics_quake_gravity 800
 set g_physics_quake_airaccel_qw 1
 set g_physics_quake_airstrafeaccel_qw 0
 set g_physics_quake_airspeedlimit_nonqw 0
@@ -112,6 +115,7 @@ set g_physics_quake_stepdown 0
 // ========
 //  Warsow
 // ========
+set g_physics_warsow_gravity 800
 set g_physics_warsow_airaccel_qw 1
 set g_physics_warsow_airstrafeaccel_qw 0
 set g_physics_warsow_airspeedlimit_nonqw 0
@@ -145,6 +149,7 @@ set g_physics_warsow_stepdown 0
 // ========
 //  XDF
 // ========
+set g_physics_xdf_gravity 800
 set g_physics_xdf_airaccel_qw 0.95
 set g_physics_xdf_airstrafeaccel_qw 1
 set g_physics_xdf_airspeedlimit_nonqw 0
@@ -178,6 +183,7 @@ set g_physics_xdf_stepdown 2
 // =========
 //  Quake 3
 // =========
+set g_physics_quake3_gravity 750
 set g_physics_quake3_airaccel_qw 1
 set g_physics_quake3_airstrafeaccel_qw 0
 set g_physics_quake3_airspeedlimit_nonqw 0
@@ -211,6 +217,7 @@ set g_physics_quake3_stepdown 0
 // =========
 //  CPMA
 // =========
+set g_physics_cpma_gravity 750
 set g_physics_cpma_airaccel_qw 1
 set g_physics_cpma_airstrafeaccel_qw 0
 set g_physics_cpma_airspeedlimit_nonqw 0
@@ -244,6 +251,7 @@ set g_physics_cpma_stepdown 0
 // ========
 //  Vecxis
 // ========
+set g_physics_vecxis_gravity 800
 set g_physics_vecxis_airaccel_qw 0.93
 set g_physics_vecxis_airstrafeaccel_qw 0
 set g_physics_vecxis_airspeedlimit_nonqw 0
@@ -277,6 +285,7 @@ set g_physics_vecxis_stepdown 0
 // =========
 //  Quake 2
 // =========
+set g_physics_quake2_gravity 800
 set g_physics_quake2_airaccel_qw 1
 set g_physics_quake2_airstrafeaccel_qw 0
 set g_physics_quake2_airspeedlimit_nonqw 0
@@ -310,6 +319,7 @@ set g_physics_quake2_stepdown 0
 // =======
 //  Bones
 // =======
+set g_physics_bones_gravity 750
 set g_physics_bones_airaccel_qw 1
 set g_physics_bones_airstrafeaccel_qw 1
 set g_physics_bones_airspeedlimit_nonqw 0
@@ -343,6 +353,7 @@ set g_physics_bones_stepdown 2
 // ==========
 //  Overkill
 // ==========
+set g_physics_overkill_gravity 800
 set g_physics_overkill_airaccel_qw -0.8
 set g_physics_overkill_airstrafeaccel_qw -0.95
 set g_physics_overkill_airspeedlimit_nonqw 900
